src/objects/MT_MediaUpdateHistory__c.object
<CustomObject>
    <fields>
        <fullName>MT_ApprovalStatus__c</fullName>
        <description>Approval status of Opportunity Freigaben</description>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Eingereicht</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Diskussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Genehmigt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abgelehnt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MT_MCamp_BmvDigital__c</fullName>
        <label>BMV Digital</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_MCamp_BmvDooH__c</fullName>
        <label>BMV DooH</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_MCamp_BmvTV__c</fullName>
        <label>BMV TV (gesamt)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_MCamp_BmvTvCustomerIntegration__c</fullName>
        <label>BMV TV Kundenintegration</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_MCamp_CashZahlung__c</fullName>
        <label>Cash Zahlung</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_MCamp_ContractEnddate__c</fullName>
        <label>Vertragsende</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_MCamp_ContractStartdate__c</fullName>
        <label>Vertragsbeginn</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_MCamp_EigenerBuchwertinEUR__c</fullName>
        <label>Eigener Buchwert in EUR</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_MCamp_ExitParticipation__c</fullName>
        <label>Exit Participation</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_MCamp_FillUp__c</fullName>
        <label>Fill-Up</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_MCamp_FixRevenue_MonthlyPayment__c</fullName>
        <label>Fix Revenue Monthly Payment</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_MCamp_FixRevenue_Type__c</fullName>
        <globalPicklist>MT_FixRevenueTypes</globalPicklist>
        <label>Fixe Umsatzart</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MT_MCamp_GrossBarterVolume__c</fullName>
        <label>Brutto-Barter-Volumen</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_MCamp_Mn3TvCustomerIntegration__c</fullName>
        <label>MN3 TV Kundenintegration</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_MCamp_NetBarterVolume__c</fullName>
        <label>Netto-Barter-Volumen</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_MCamp_RunTimeTVEnd__c</fullName>
        <label>Ende Laufzeit (TV)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_MCamp_RunTimeTVStart__c</fullName>
        <label>Start Laufzeit (TV)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_MCamp_TvSpotLengthCustomer__c</fullName>
        <label>Kundenanteil Spotlänge (in Sekunden)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_MCamp_TvSpotLength__c</fullName>
        <label>Gesamtspotlänge (in Sekunden)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_MCamp_VariableRevenue1_RevenuePerUnit__c</fullName>
        <label>Var. Umsatz 1 - Umsatz pro Einheit</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_MCamp_VariableRevenue1_SoldAmount__c</fullName>
        <label>Var. Umsatz 1 - Verkaufte Anzahl</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_MCamp_VariableRevenue1_SoldProduct__c</fullName>
        <label>Var. Umsatz 1 - Verkauftes Produkt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_MCamp_VariableRevenue1_SoldUnit__c</fullName>
        <globalPicklist>MT_ProductSalesUnit</globalPicklist>
        <label>Var. Umsatz 1 - Verkaufseinheit</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MT_MCamp_VariableRevenue2_RevenuePerUnit__c</fullName>
        <label>Var. Umsatz 2 - Umsatz pro Einheit</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_MCamp_VariableRevenue2_SoldAmount__c</fullName>
        <label>Var. Umsatz 2 - Verkaufte Anzahl</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_MCamp_VariableRevenue2_SoldProduct__c</fullName>
        <label>Var. Umsatz 2 - Verkauftes Produkt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_MCamp_VariableRevenue2_SoldUnit__c</fullName>
        <globalPicklist>MT_ProductSalesUnit</globalPicklist>
        <label>Var. Umsatz 2 - Verkaufseinheit</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MT_MCamp_VariableRevenue3_RevenuePerUnit__c</fullName>
        <label>Var. Umsatz 3 - Umsatz pro Einheit</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_MCamp_VariableRevenue3_SoldAmount__c</fullName>
        <label>Var. Umsatz 3 - Verkaufte Anzahl</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_MCamp_VariableRevenue3_SoldProduct__c</fullName>
        <label>Var. Umsatz 3 - Verkauftes Produkt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_MCamp_VariableRevenue3_SoldUnit__c</fullName>
        <globalPicklist>MT_ProductSalesUnit</globalPicklist>
        <label>Var. Umsatz 3 - Verkaufseinheit</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MT_MediaCampaign_ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relation to the Media Campaign to update</description>
        <label>Media Transparency Campaign</label>
        <referenceTo>MT_MediaCampaign__c</referenceTo>
        <relationshipName>MT_UpdateRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MT_OppApp_BmvDigital__c</fullName>
        <label>BMV Digital</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_OppApp_BmvDooH__c</fullName>
        <label>BMV DooH</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_OppApp_BmvTvCustomerIntegration__c</fullName>
        <label>BMV TV Kundenintegration</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_OppApp_CashZahlung__c</fullName>
        <label>Cash Zahlung</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_OppApp_ContractEnddate__c</fullName>
        <label>Vertragsende</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_OppApp_ContractStartdate__c</fullName>
        <label>Vertragsbeginn</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_OppApp_EigenerBuchwertinEUR__c</fullName>
        <label>Eigener Buchwert in EUR</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_OppApp_ExitParticipation__c</fullName>
        <label>Exit Participation</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_OppApp_FillUp__c</fullName>
        <label>Fill-Up</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_OppApp_FixRevenue_MonthlyPayment__c</fullName>
        <label>Fix Revenue Monthly Payment</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_OppApp_FixRevenue_Type__c</fullName>
        <globalPicklist>MT_FixRevenueTypes</globalPicklist>
        <label>Fixe Umsatzart</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MT_OppApp_GrossBarterVolume__c</fullName>
        <label>Brutto-Barter-Volumen</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_OppApp_Mn3TvCustomerIntegration__c</fullName>
        <label>MN3 TV Kundenintegration</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_OppApp_NetBarterVolume__c</fullName>
        <label>Netto-Barter-Volumen</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_OppApp_P7S1_BmvTv__c</fullName>
        <label>BMV TV (gesamt)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_OppApp_RunTimeTVEnd__c</fullName>
        <label>Ende Laufzeit (TV)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_OppApp_RunTimeTVStart__c</fullName>
        <label>Start Laufzeit (TV)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_OppApp_TvSpotLengthCustomer__c</fullName>
        <label>Kundenanteil Spotlänge (in Sekunden)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_OppApp_TvSpotLength__c</fullName>
        <label>Gesamtspotlänge (in Sekunden)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_OppApp_VariableRevenue1_RevPerUnit__c</fullName>
        <label>Var. Umsatz 1 - Umsatz pro Einheit</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_OppApp_VariableRevenue1_SoldAmount__c</fullName>
        <label>Var. Umsatz 1 - Verkaufte Anzahl</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_OppApp_VariableRevenue1_SoldProduct__c</fullName>
        <label>Var. Umsatz 1 - Verkauftes Produkt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_OppApp_VariableRevenue1_SoldUnit__c</fullName>
        <globalPicklist>MT_ProductSalesUnit</globalPicklist>
        <label>Var. Umsatz 1 - Verkaufseinheit</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MT_OppApp_VariableRevenue2_RevPerUnit__c</fullName>
        <label>Var. Umsatz 2 - Umsatz pro Einheit</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_OppApp_VariableRevenue2_SoldAmount__c</fullName>
        <label>Var. Umsatz 2 - Verkaufte Anzahl</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_OppApp_VariableRevenue2_SoldProduct__c</fullName>
        <label>Var. Umsatz 2 - Verkauftes Produkt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_OppApp_VariableRevenue2_SoldUnit__c</fullName>
        <globalPicklist>MT_ProductSalesUnit</globalPicklist>
        <label>Var. Umsatz 2 - Verkaufseinheit</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MT_OppApp_VariableRevenue3_RevPerUnit__c</fullName>
        <label>Var. Umsatz 3 - Umsatz pro Einheit</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_OppApp_VariableRevenue3_SoldAmount__c</fullName>
        <label>Var. Umsatz 3 - Verkaufte Anzahl</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_OppApp_VariableRevenue3_SoldProduct__c</fullName>
        <label>Var. Umsatz 3 - Verkauftes Produkt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_OppApp_VariableRevenue3_SoldUnit__c</fullName>
        <globalPicklist>MT_ProductSalesUnit</globalPicklist>
        <label>Var. Umsatz 3 - Verkaufseinheit</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MT_Opp_P7S1_HasMediaDigital__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Digital (71M)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MT_Opp_P7S1_HasMediaTV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MT_Opp_Som_DooH7Screen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DooH (7Screen)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MT_OpportunityApproval_ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relation to the Opportunity Approval to update</description>
        <label>Opportunity Approval</label>
        <referenceTo>P7S1_OpportunityApproval__c</referenceTo>
        <relationshipName>MT_UpdateRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MT_Opportunity_ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relation to the Opportunity to update</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>MT_UpdateRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MT_SYS_AccountOwnerUnit__c</fullName>
        <label>Account Owner Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_Sys_ApprovalSubmittedFromCampaign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MT_Sys_ApprovalSubmittedFromCampaign</label>
        <type>Checkbox</type>
    </fields>
    <label>Media Update History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UR{0000000}</displayFormat>
        <label>Update Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Media Update Histories</pluralLabel>
    <recordTypes>
        <fullName>MediaBuildingBlock</fullName>
        <active>true</active>
        <description>The original object that should be changed</description>
        <label>Media Building Block</label>
    </recordTypes>
    <recordTypes>
        <fullName>MediaCampaign</fullName>
        <active>true</active>
        <description>The original object that should be changed</description>
        <label>Media Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>OpportunityApproval</fullName>
        <active>true</active>
        <description>The original object that should be changed</description>
        <label>Opportunity Approval</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Media_Update_Request_Mod_Prevent</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(ISNEW())</errorConditionFormula>
        <errorMessage>Update Request cannot be modified</errorMessage>
    </validationRules>
</CustomObject>